--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,15 @@
 }
 
 .likeButton {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 255, 0);
   color: black;
   padding: 0.8rem;
   /* border-radius: 0.4rem; */
   cursor: pointer;
+}
+
+.inner {
+  padding-top: 30px;
+  display: flex;
+  justify-content: space-evenly;
 }
