--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* ======================================================================== */
+
 .App {
   text-align: center;
 }
